# hyperliquid-rust-sdk

./: Cargo.toml  FAST_WEBSOCKET.md  NETWORK_IMPROVEMENTS.md  README.md
src/: helpers.rs  lib.rs  market_maker.rs  net.rs  req.rs
src/exchange/: actions.rs  exchange_client.rs  mod.rs  modify.rs
src/info/: info_client.rs
src/ws/: backend.rs  legacy.rs  mod.rs  sub_structs.rs  ws_manager.rs
src/ws/fast/: connection.rs  mod.rs  router.rs  types.rs  zero_copy.rs
tests/: http_pool.rs  mock_websocket_tests.rs  multiple_subscriptions_test.rs  single_subscription_test.rs  websocket_integration_tests.rs  websocket_message_parsing.rs  websocket_property_tests.rs  ws_routing_test.rs  ws_type_mismatch.rs  zero_copy_parsing.rs
